force-app/main/default/objects/AccountRelationship__c/AccountRelationship__c.object-meta.xml
<CustomObject>
    <description>Not in use, no data</description>
    <label>EU-Account Relationship</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EU-Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>