force-app/main/default/objects/AccountRelationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EU-Account Relationships</relationshipLabel>
    <relationshipName>R00N20000000rlNpEAI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>