force-app/main/default/objects/AccountRelationship__c/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
    <language>de</language>
</ListView>